--- a/assets/index.html
+++ b/assets/index.html
@@ -12,10 +12,26 @@
     <div class=jumbotron>
 			<h1>TimeSheet</h1>
 		</div>
-		<div class=panelheading></div>
-		<div class=form>
-			
-		</div>
+		<form  style= "border: solid; padding: 5px;">
+			<div class=panelheading></div>
+			<div class="form-group">
+				<label for="name">Name:</label>
+				<input type="text" class="form-control" id="name-input" placeholder="Name">
+			</div>
+			<div class="form-group">
+				<label for="role">Role:</label>
+				<input type="text" class="form-control" id="role-input" placeholder="Role">
+			</div>
+			<div class="form-group">
+				<label for="start-date">Start-Date:</label>
+				<input type="text" class="form-control" id="start-date" placeholder="ex. 01/01/80">
+			</div>
+			<div class="form-group">
+				<label for="start-date">Monthly Rate:</label>
+				<input type="text" class="form-control" id="monthly-date" placeholder="ex. 01/01/80">
+			</div>
+			<button type="submit" class="btn btn-default">Submit</button>
+		</form>
   </div>
 	
 </body>
