--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class=container>
-    <div class=jumbotron style="text-align: center;">
+    <div class=jumbotron style="text-align: center; background-color: black; color: white;">
 			<h1>TimeSheet</h1>
 		</div>
 		<div class=panelheading style="background-color: blue; color: white; padding: 2px;">Add Eployee</div>
