--- a/assets/index.html
+++ b/assets/index.html
@@ -12,6 +12,18 @@
     <div class=jumbotron>
 			<h1>TimeSheet</h1>
 		</div>
+
+		<div class="emplyHeader" style="border: solid; padding: 5px;"><strong style="font-size: 18px">Current Employee</strong>
+			<div class="row">
+				<div class="col-md-2">Employee Name</div>
+				<div class="col-md-2">Role</div>
+				<div class="col-md-2">Start Date</div>
+				<div class="col-md-2">Months Worked</div>
+				<div class="col-md-2">Monthly Rate ($)</div>
+				<div class="col-md-2">Total Billed ($)</div>				
+			</div>
+
+		</div><br>
 		<form  style= "border: solid; padding: 5px;">
 			<div class=panelheading></div>
 			<div class="form-group">
