--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
+    <div class="curntEmplee">I'm the Employee</div>
 
     <div class="input-group">
         <span class="input-group-addon" id="basic-addon1">@</span>
