--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class=jumbotron style="text-align: center; background-color: black; color: white;">
 			<h1>TimeSheet</h1>
 		</div>
-		<div class=panelheading style="background-color: blue; color: white; padding: 2px;">Add Eployee</div>
-		<form  style= "border: solid; padding: 5px;">
+		<div class=panelheading style="border: solid; border-color: black; background-color: blue; color: white; padding: 2px;">Add Eployee</div>
+		<form  style= "border: solid; border-color: black; padding: 5px;">
 			<div class="form-group">
 				<label for="name">Name:</label>
 				<input type="text" class="form-control" id="name-input" placeholder="Name">
