--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<title>FireBase Time Sheet</title>
+	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+
 </head>
 <body>
   <div class=container>
@@ -34,5 +36,7 @@
 		</form>
   </div>
 	
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="assets/javascript/timesheet.js"></script>
 </body>
 </html>
