--- a/index.html
+++ b/index.html
@@ -14,16 +14,38 @@
 			<h1>TimeSheet</h1>
 		</div>
 
-		<div class="emplyHeader" style="border: solid; padding: 5px;"><strong style="font-size: 18px">Current Employee</strong>
-			<div class="row">
-				<div class="col-md-2">Employee Name</div>
-				<div class="col-md-2">Role</div>
-				<div class="col-md-2">Start Date</div>
-				<div class="col-md-2">Months Worked</div>
-				<div class="col-md-2">Monthly Rate ($)</div>
-				<div class="col-md-2">Total Billed ($)</div>				
-			</div>
-			</div><br>
+		<div class="emplyHeader" style="background-color: blue; color: white; padding: 2px;"><strong style="font-size: 18px">Current Employee</strong></div>
+		<div>
+				<table id="table" class="table">
+					<thead>
+					  <tr>
+						<th>Employee Name</th>
+						<th>Role</th>
+						<th>Start Date</th>
+						<th>Months Worked</th>
+						<th>Monthly Rate ($)</th>
+						<th>Total Billed ($)</th>
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+						<td>John</td>
+						<td>Doe</td>
+						<td>john@example.com</td>
+					  </tr>
+					  <tr>
+						<td>Mary</td>
+						<td>Moe</td>
+						<td>mary@example.com</td>
+					  </tr>
+					  <tr>
+						<td>July</td>
+						<td>Dooley</td>
+						<td>july@example.com</td>
+					  </tr>
+					</tbody>
+				  </table>
+				</div><br>
 
 		<div class=panelheading style="background-color: blue; color: white; padding: 2px;">Add Eployee</div>
 		<form  style= "border: solid; padding: 5px;">
