--- a/index.html
+++ b/index.html
@@ -15,47 +15,43 @@
 		<div class=jumbotron style="text-align: center; background-color: black; color: white;">
 			<h1>TimeSheet</h1>
 		</div>
-<<<<<<< HEAD
-		<div class=panelheading style="border: solid; border-color: black; background-color: blue; color: white; padding: 2px;">Add Eployee</div>
-		<form  style= "border: solid; border-color: black; padding: 5px;">
-=======
-
-		<div class="emplyHeader" style="background-color: blue; color: white; padding: 2px;"><strong style="font-size: 18px">Current Employee</strong></div>
-		<div>
+		<div style="border: solid 3px;">
+			<div class="emplyHeader" style="background-color: blue; color: white; padding: 2px;"><strong style="font-size: 18px">Current Employee</strong></div>
+			<div>
 				<table id="table" class="table">
 					<thead>
-					  <tr>
-						<th>Employee Name</th>
-						<th>Role</th>
-						<th>Start Date</th>
-						<th>Months Worked</th>
-						<th>Monthly Rate ($)</th>
-						<th>Total Billed ($)</th>
-					  </tr>
+						<tr>
+							<th>Employee Name</th>
+							<th>Role</th>
+							<th>Start Date</th>
+							<th>Months Worked</th>
+							<th>Monthly Rate ($)</th>
+							<th>Total Billed ($)</th>
+						</tr>
 					</thead>
 					<tbody>
-					  <tr>
-						<td>John</td>
-						<td>Doe</td>
-						<td>john@example.com</td>
-					  </tr>
-					  <tr>
-						<td>Mary</td>
-						<td>Moe</td>
-						<td>mary@example.com</td>
-					  </tr>
-					  <tr>
-						<td>July</td>
-						<td>Dooley</td>
-						<td>july@example.com</td>
-					  </tr>
+						<tr>
+							<td>John</td>
+							<td>Doe</td>
+							<td>john@example.com</td>
+						</tr>
+						<tr>
+							<td>Mary</td>
+							<td>Moe</td>
+							<td>mary@example.com</td>
+						</tr>
+						<tr>
+							<td>July</td>
+							<td>Dooley</td>
+							<td>july@example.com</td>
+						</tr>
 					</tbody>
-				  </table>
-				</div><br>
+				</table>
+			</div><br>
+		</div><br>
 
 		<div class=panelheading style="background-color: blue; color: white; padding: 2px;">Add Eployee</div>
 		<form  style= "border: solid; padding: 5px;">
->>>>>>> 3a8f724a38f138f23af8c444c754f4a9692bae04
 			<div class="form-group">
 				<label for="name">Name:</label>
 				<input type="text" class="form-control" id="name-input" placeholder="Name">
