--- a/index.html
+++ b/index.html
@@ -49,27 +49,28 @@
 				</table>
 			</div><br>
 		</div><br>
-
-		<div class=panelheading style="background-color: blue; color: white; padding: 2px;">Add Eployee</div>
-		<form  style= "border: solid; padding: 5px;">
-			<div class="form-group">
-				<label for="name">Name:</label>
-				<input type="text" class="form-control" id="name-input" placeholder="Name">
-			</div>
-			<div class="form-group">
-				<label for="role">Role:</label>
-				<input type="text" class="form-control" id="role-input" placeholder="Role">
-			</div>
-			<div class="form-group">
-				<label for="start-date">Start-Date:</label>
-				<input type="text" class="form-control" id="start-date" placeholder="ex. 01/01/80">
-			</div>
-			<div class="form-group">
-				<label for="start-date">Monthly Rate:</label>
-				<input type="text" class="form-control" id="monthly-rate" placeholder="">
-			</div>
-			<button type="submit" class="btn btn-default" id="submit-btn">Submit</button>
-		</form>
+		<div class="add-employee" style="border: solid;">
+			<div class=panelheading style="background-color: blue; color: white; padding: 2px;"><strong style="font-size: 18px">Add Employee</strong></div>
+			<form  style= "padding: 5px;">
+				<div class="form-group">
+					<label for="name">Name:</label>
+					<input type="text" class="form-control" id="name-input" placeholder="Name">
+				</div>
+				<div class="form-group">
+					<label for="role">Role:</label>
+					<input type="text" class="form-control" id="role-input" placeholder="Role">
+				</div>
+				<div class="form-group">
+					<label for="start-date">Start-Date:</label>
+					<input type="text" class="form-control" id="start-date" placeholder="ex. 01/01/80">
+				</div>
+				<div class="form-group">
+					<label for="start-date">Monthly Rate:</label>
+					<input type="text" class="form-control" id="monthly-rate" placeholder="">
+				</div>
+				<button type="submit" class="btn btn-default" id="submit-btn">Submit</button>
+			</form>
+		</div>
   </div>
 	
   <script src="https://code.jquery.com/jquery.js"></script>
